Updated latest shared/elements from gaia

--- a/elements/gaia_menu/examples/index.html
+++ b/elements/gaia_menu/examples/index.html
@@ -12,6 +12,7 @@
       font-size: 10px;
     }
   </style>
+  <script src="../../../js/component_utils.js"></script>
   <script>window.GaiaMenuBaseurl = '../';</script>
   <script src="../script.js"></script>
   <script defer src="example.js"></script>
