--- a/elements/gaia_switch/examples/index.html
+++ b/elements/gaia_switch/examples/index.html
@@ -17,6 +17,7 @@
       text-align: center;
     }
   </style>
+  <script src="../../../js/component_utils.js"></script>
   <script>window.GaiaSwitchBaseurl = '../';</script>
   <script src="../script.js"></script>
   <script defer src="example.js"></script>
