--- a/elements/gaia_buttons/examples/index.html
+++ b/elements/gaia_buttons/examples/index.html
@@ -14,6 +14,7 @@
     }
   </style>
   <script>window.GaiaButtonsBaseurl = '../';</script>
+  <script src="../../../js/component_utils.js"></script>
   <script src="../script.js" type="text/javascript"></script>
 </head>
 <body role="application">
