--- a/elements/gaia_confirm/examples/index.html
+++ b/elements/gaia_confirm/examples/index.html
@@ -14,6 +14,8 @@
   </style>
   <script>window.GaiaConfirmBaseurl = '../';</script>
   <script>window.GaiaButtonsBaseurl = '../../gaia_buttons/';</script>
+  
+  <script src="../../../js/component_utils.js"></script>
   <script src="../../gaia_buttons/script.js"></script>
   <script src="../script.js"></script>
 </head>
