--- a/elements/gaia_header/examples/edit_mode.html
+++ b/elements/gaia_header/examples/edit_mode.html
@@ -16,6 +16,7 @@
       height: 100%;
     }
   </style>
+  <script src="../../../js/component_utils.js"></script>
   <script>window.GaiaHeaderBaseurl = '../';</script>
   <script src="../script.js" type="text/javascript"></script>
   <script>window.GaiaButtonsBaseurl = '../../gaia_buttons/';</script>
