--- a/elements/gaia_header/examples/index.html
+++ b/elements/gaia_header/examples/index.html
@@ -23,6 +23,7 @@
     }
   </style>
   <script>window.GaiaHeaderBaseurl = '../';</script>
+  <script src="../../../js/component_utils.js"></script>
   <script src="../script.js" type="text/javascript"></script>
 </head>
 
