--- a/elements/gaia_subheader/examples/index.html
+++ b/elements/gaia_subheader/examples/index.html
@@ -13,6 +13,7 @@
       background-color: #fff;
     }
   </style>
+  <script src="../../../js/component_utils.js"></script>
   <script>window.GaiaSubheaderBaseurl = '../';</script>
   <script src="../script.js" type="text/javascript"></script>
 </head>
