Updated latest shared/elements from gaia

--- a/elements/gaia_header/examples/edit_mode.html
+++ b/elements/gaia_header/examples/edit_mode.html
@@ -30,7 +30,7 @@
     <button id="edit1">Edit mode</button>
   </gaia-header>
 
-  <gaia-header id="header2" data-action="close" data-skin="organic" transition="slide" hidden>
+  <gaia-header id="header2" action="close" skin="organic" transition="slide" hide>
     <h1>Edit mode</h1>
     <button id="done2">done</button>
   </gaia-header>
