--- a/elements/gaia_header/examples/index.html
+++ b/elements/gaia_header/examples/index.html
@@ -30,41 +30,41 @@
 <body role="application">
   <gaia-header id="header1">
     <h1 id="title1" data-l10n-id="title">Messages</h1>
-    <button id="edit1" data-icon="edit"></button>
-    <button id="add1" data-icon="add"></button>
+    <button id="edit1" icon="edit"></button>
+    <button id="add1" icon="add"></button>
   </gaia-header>
 
-  <gaia-header id="header2" data-action="back">
+  <gaia-header id="header2" action="back">
     <h1 id="title2">Mark Alfenito</h1>
-    <button id="edit2" data-icon="edit"></button>
+    <button id="edit2" icon="edit"></button>
   </gaia-header>
 
-  <gaia-header id="header3" data-action="menu">
+  <gaia-header id="header3" action="menu">
     <h1 id="title2">Inbox <em>(2)</em></h1>
-    <button id="edit3" data-icon="edit"></button>
-    <button id="add3" data-icon="add"></button>
+    <button id="edit3" icon="edit"></button>
+    <button id="add3" icon="add"></button>
   </gaia-header>
 
-  <gaia-header id="header4" data-action="close">
+  <gaia-header id="header4" action="close">
     <h1 id="title2">Title</h1>
     <button id="done4">done</button>
   </gaia-header>
 
-  <gaia-header id="header5" data-action="back" data-skin="dark">
+  <gaia-header id="header5" action="back" skin="dark">
     <h1 id="title2">Skin: dark</h1>
-    <button id="edit5" data-icon="edit"></button>
+    <button id="edit5" icon="edit"></button>
     <button id="done5">done</button>
   </gaia-header>
 
-  <gaia-header id="header6" data-action="back" data-skin="organic">
+  <gaia-header id="header6" action="back" skin="organic">
     <h1 id="title2">Skin: organic</h1>
-    <button id="edit6" data-icon="edit"></button>
+    <button id="edit6" icon="edit"></button>
     <button id="done6">done</button>
   </gaia-header>
 
-  <gaia-header id="header7" data-action="back" data-skin="comms">
+  <gaia-header id="header7" action="back" skin="comms">
     <h1 id="title2">Skin: comms</h1>
-    <button id="edit7" data-icon="edit"></button>
+    <button id="edit7" icon="edit"></button>
     <button id="done7">done</button>
   </gaia-header>
 
