Updated latest shared/elements from gaia

--- a/elements/gaia_drawer/examples/index.html
+++ b/elements/gaia_drawer/examples/index.html
@@ -56,7 +56,7 @@
 </head>
 <body role="application">
   <div class="slot third">
-    <gaia-header data-action="menu"><h1>Title</h1></gaia-header>
+    <gaia-header action="menu"><h1>Title</h1></gaia-header>
     <gaia-drawer open>
       <section data-type="list">
         <ul>
@@ -68,7 +68,7 @@
     </gaia-drawer>
   </div>
   <div class="slot third">
-    <gaia-header data-action="menu"><h1>Title</h1></gaia-header>
+    <gaia-header action="menu"><h1>Title</h1></gaia-header>
     <gaia-drawer>
       <section data-type="list">
         <ul>
@@ -80,7 +80,7 @@
     </gaia-drawer>
   </div>
   <div class="slot third">
-    <gaia-header data-action="menu"><h1>Title</h1></gaia-header>
+    <gaia-header action="menu"><h1>Title</h1></gaia-header>
     <gaia-drawer>
       <section data-type="list">
         <ul>
