Updated latest shared/elements from gaia

--- a/elements/gaia_subheader/examples/index.html
+++ b/elements/gaia_subheader/examples/index.html
@@ -19,6 +19,6 @@
 </head>
 <body role="application">
   <gaia-subheader>Some title</gaia-subheader>
-  <gaia-subheader data-skin="organic">Some title</gaia-subheader>
+  <gaia-subheader skin="organic">Some title</gaia-subheader>
 </body>
 </html>
