Updated latest shared/elements from gaia

--- a/elements/gaia_radio/examples/index.html
+++ b/elements/gaia_radio/examples/index.html
@@ -36,14 +36,14 @@
       </li>
     </ul>
     <header>With an inner label:</header>
-    <ul>
-      <li>
-        <gaia-radio name="third" checked>
+    <ul role="menu">
+      <li role="presentation">
+        <gaia-radio name="third" data-role="menuitemradio" checked>
           <p>Here is the first option</p>
         </gaia-radio>
       </li>
-      <li>
-        <gaia-radio name="third">
+      <li role="presentation">
+        <gaia-radio name="third" data-role="menuitemradio">
           <p>Here is the second option</p>
         </gaia-radio>
       </li>
