--- a/elements/gaia_header/examples/edit_mode.html
+++ b/elements/gaia_header/examples/edit_mode.html
@@ -25,7 +25,7 @@
 </head>
 
 <body role="application">
-  <gaia-header id="header1">
+  <gaia-header id="header1" transition="">
     <h1>Main header</h1>
     <button id="edit1">Edit mode</button>
   </gaia-header>
@@ -43,14 +43,17 @@
   <script>
     window.onload = function() {
       document.getElementById('edit1').addEventListener('click', function() {
+        document.getElementById('header1').setAttribute('hidden', '');
         document.getElementById('header2').removeAttribute('hidden');
         document.getElementById('buttons').removeAttribute('hidden');
       });
       document.getElementById('header2').addEventListener('action', function(e) {
+        document.getElementById('header1').removeAttribute('hidden');
         document.getElementById('header2').setAttribute('hidden', '');
         document.getElementById('buttons').setAttribute('hidden', '');
       });
       document.getElementById('done2').addEventListener('click', function() {
+        document.getElementById('header1').removeAttribute('hidden');
         document.getElementById('header2').setAttribute('hidden', '');
         document.getElementById('buttons').setAttribute('hidden', '');
       });
