Updated latest shared/elements from gaia

--- a/elements/gaia_grid/examples/index.html
+++ b/elements/gaia_grid/examples/index.html
@@ -24,16 +24,16 @@
   <script>window.GaiaGridBaseurl = '../';</script>
   <script src="../../../js/url_helper.js"></script>
   <script src="../../../js/l10n.js"></script>
+  <script src="../script.js"></script>
   <script src="../js/grid_view.js"></script>
   <script src="../js/items/grid_item.js"></script>
   <script src="../js/items/placeholder.js"></script>
   <script src="../js/items/bookmark.js"></script>
   <script src="../js/items/divider.js"></script>
-  <script src="../js/items/icon.js"></script>
+  <script src="../js/items/mozapp.js"></script>
   <script src="../js/grid_layout.js"></script>
   <script src="../js/grid_dragdrop.js"></script>
   <script src="../js/grid_zoom.js"></script>
-  <script src="../script.js"></script>
 </head>
 <body role="application">
   <button id="clear">Clear Grid</button>
