Updated latest shared/elements from gaia

--- a/elements/gaia_grid/examples/index.html
+++ b/elements/gaia_grid/examples/index.html
@@ -26,6 +26,7 @@
   <script src="../../../js/l10n.js"></script>
   <script src="../script.js"></script>
   <script src="../js/grid_view.js"></script>
+  <script src="../js/grid_icon_renderer.js"></script>
   <script src="../js/items/grid_item.js"></script>
   <script src="../js/items/placeholder.js"></script>
   <script src="../js/items/bookmark.js"></script>
