--- a/elements/gaia_tabs/examples/index.html
+++ b/elements/gaia_tabs/examples/index.html
@@ -118,26 +118,12 @@
   </section>
   <section>
     <div class="info"></div>
-    <gaia-tabs selected="0" position="top">
-      <a href="#">All</a>
-      <a href="#">Missed</a>
-    </gaia-tabs>
-  </section>
-  <section>
-    <div class="info"></div>
-    <gaia-tabs selected="1">
-      <button class="icon-call-log"></button>
-      <button class="icon-contacts"></button>
-    </gaia-tabs>
-  </section>
-  <section>
-    <div class="info"></div>
     <gaia-tabs selected="2">
-      <button class="icon-dialer"></button>
-      <button class="icon-contacts"></button>
-      <button class="icon-call-log"></button>
-      <button disabled="">More</button>
-      <button>Things</button>
+      <a href="#" class="icon-dialer"></a>
+      <a href="#" class="icon-contacts"></a>
+      <a href="#" class="icon-call-log"></a>
+      <a href="#" disabled="">More</a>
+      <a href="#">Things</a>
     </gaia-tabs>
   </section>
   <section>
@@ -148,6 +134,27 @@
       <button class="icon-call-log-dark"></button>
       <button disabled="">More</button>
       <button>Things</button>
+    </gaia-tabs>
+  </section>
+  <section>
+    <div class="info"></div>
+    <gaia-tabs  skin="dark" selected="0" position="top">
+      <button>All</button>
+      <button>Missed</button>
+    </gaia-tabs>
+  </section>
+  <section>
+    <div class="info"></div>
+    <gaia-tabs selected="0" position="top">
+      <button>All</button>
+      <button>Missed</button>
+    </gaia-tabs>
+  </section>
+  <section>
+    <div class="info"></div>
+    <gaia-tabs underline="child" selected="0" position="top">
+      <button><span>All</span></button>
+      <button><span>Missed</span></button>
     </gaia-tabs>
   </section>
 <script>
