Updated latest shared/elements from gaia

--- a/elements/gaia_checkbox/examples/index.html
+++ b/elements/gaia_checkbox/examples/index.html
@@ -14,7 +14,7 @@
       width: 100%;
     }
     section {
-      text-align: center;
+      margin: 2rem;
     }
   </style>
   <script src="../../../js/component_utils.js"></script>
@@ -27,7 +27,7 @@
     <gaia-checkbox></gaia-checkbox>
   </section>
   <section>
-    <gaia-checkbox checked>
+    <gaia-checkbox checked style="width: 100%;">
       <label>With a label</label>
     </gaia-checkbox>
   </section>
